CHANGELOG
=========


1.4.2 (unreleased)
------------------

- Nothing changed yet.


1.4.1 (2015-03-25)
------------------

- The Site Administrator has the same permissions as the Manager now.
  [mbaechtold]


1.4.0 (2015-02-09)
------------------

- Count only visible ads on category overview.
  [mathias.leimgruber]

- Improve prev. upgrade step by idexing only BillboardAds.
  [mathias.leimgruber]

- Added separate expiration date.
  [lknoepfel]


1.3.4 (2014-07-11)
------------------

- Fix validator translations.
  [mathias.leimgruber]


1.3.3 (2014-07-11)
------------------

- Updated translations.
  [tschanzt]


1.3.2 (2014-06-24)
------------------

- Show description on simple upload view (file, image)
  [mathias.leimgruber]


1.3.1 (2014-06-10)
------------------

- Hide upload-action for richtext fields.
  [mathias.leimgruber]


1.3.0 (2014-06-02)
------------------

- Update German translations.
  [jone]

- Removed broken image in ads view.
  [Julian Infanger]

- Implement billboard conditions.
  [mathias.leimgruber]

- Plone 4.3 compatibility.
  [mathias.leimgruber]


1.2.4 (2013-11-15)
------------------

- Fix close selector for overlay in billboardads.
  [Julian Infanger]

- Replace jq with $ in javascript file.
  [Julian Infanger]


1.2.3 (2013-08-14)
------------------

- Add permissionmapping for ftw.lawgiver
  [elioschmutz]


1.2.2 (2013-03-04)
------------------

- Use lower email address in billboardad as default contact mail.
  [Julian Infanger]

- Use colorbox to display images in overlay.
  [Julian Infanger]


1.2.1 (2012-10-17)
------------------

- Reindex file after uploading. Add class to button in simple upload form.
  [Julian Infanger]

- Updated help text for price in billboard ad. Fixed english in registry.
  [Julian Infanger]


1.2 (2012-10-05)
----------------

- Make displaying currency of billboard ads configurable per site.
  In portal_registry there are three new configuration options:

  - name or symbol of the currency